# Dual-Mode

./: .gitignore  ESP32_CAM_QUICK_START.md  MoveIt_Simulation_Troubleshooting.md  PROGRESS.md  PROJECT_PROGRESS_COMPREHENSIVE.md  README.md  REMAINING_STEPS.md  Robotic_Arm_Project_Documentation(2).md  START_HERE.md  apply_colors.py  build_autonomous_sorting.sh  commands.md  fix_urdf.py  index.html  progress.md  red_box_demo.sdf  red_box_multi_b.sdf  robotic_arm_complete_guide(1).docx  run_moveit_setup.sh  update_joints.py  updates.md
archive/: DEPLOYMENT_READY.md  START_HERE.md  TEST_COMMANDS_CHECKLIST.md
docs/: ADDED_CHANGES_SUMMARY.txt  ARDUINO_PENDRIVE_ENV.md  (+21 more)
src/robot_arm_hardware/: CMakeLists.txt  calibration_tester.py  package.xml  robot_arm_hardware.xml
src/robot_arm_hardware/firmware/: arm_firmware.ino  firmware.ino
src/robot_arm_hardware/firmware/tests/test_01_single_servo_direct/: test_01_single_servo_direct.ino
src/robot_arm_hardware/firmware/tests/test_02_single_servo_pca9685/: test_02_single_servo_pca9685.ino
src/robot_arm_hardware/firmware/tests/test_03_all_servos_pca9685/: test_03_all_servos_pca9685.ino
src/robot_arm_hardware/firmware/tests/test_03_gripper_limit_finder/: test_03_gripper_limit_finder.ino
src/robot_arm_hardware/include/robot_arm_hardware/: system_interface.hpp
src/robot_arm_hardware/launch/: hardware_base.launch.py  hardware_gesture.launch.py
src/robot_arm_hardware/scripts/: hardware_tester.py  stress_tester.py
src/robot_arm_hardware/src/: system_interface.cpp
src/robot_arm_hardware/test_mpu6050/: test_mpu6050.ino
(+117 files in other folders)
